--- a/bashtest/Views/Home/Index.cshtml
+++ b/bashtest/Views/Home/Index.cshtml
@@ -5,3 +5,18 @@
 <div class="text-center">
     <h1>This is the home page</h1>
 </div>
+
+<div class="row text-center">
+    <div class="row">
+        <h1>Bites Range 0</h1>
+    </div>
+    <div class="col">
+        <h1>Cheese Bites</h1>
+    </div>
+    <div class="col">
+        <h1>Chicken Bites</h1>
+    </div>
+    <div class="col">
+        <h1>Broccoli bites</h1>
+    </div>
+</div>
