--- a/bashtest/Views/Home/Index.cshtml
+++ b/bashtest/Views/Home/Index.cshtml
@@ -9,14 +9,18 @@
 <div class="row text-center">
     <div class="row">
         <h1>Bites Range 0</h1>
+        
     </div>
     <div class="col">
-        <h1>Cheese Bites</h1>
+		<h1>Cheese Bites</h1>
+        <img src="/Images/cheesebites.jfif" alt="cheese bites" style="height:auto; width:contain">
     </div>
     <div class="col">
         <h1>Chicken Bites</h1>
+        <img src="/Images/chickenbites.jfif" alt="chicken bites" style="height:auto; width:contain">
     </div>
     <div class="col">
         <h1>Broccoli bites</h1>
+        <img src="/Images/brocollibites.jfif" alt="broccoli bites" style="height:auto; width:contain">
     </div>
 </div>
