--- a/bashtest/Views/Home/Index.cshtml
+++ b/bashtest/Views/Home/Index.cshtml
@@ -24,3 +24,37 @@
         <img src="/Images/brocollibites.jfif" alt="broccoli bites" style="height:auto; width:contain">
     </div>
 </div>
+
+<div class="row text-center">
+    <div class="row">
+        <h1>Patties 0</h1>
+
+    </div>
+    <div class="col">
+        <h1>Quarter pounder</h1>
+        <img src="/Images/quarterpounder.jfif" alt="quarter pounder" style="height:auto; width:contain">
+    </div>
+    <div class="col">
+        <h1>Southern Style Chicken Pattie</h1>
+        <img src="/Images/chickenpatty.jfif" alt="chicken patty" style="height:auto; width:contain">
+    </div>
+</div>
+
+<div class="row text-center">
+    <div class="row">
+        <h1>Toppas 0</h1>
+
+    </div>
+    <div class="col">
+        <h1>Lasagne Toppa</h1>
+        <img src="/Images/lasagnatoppa.jfif" alt="lasagna toppa" style="height:auto; width:contain">
+    </div>
+    <div class="col">
+        <h1>Chicken Cordon Bleu</h1>
+        <img src="/Images/chickencordueblue.jfif" alt="chicken cordon bleu" style="height:auto; width:contain">
+    </div>
+    <div class="col">
+        <h1>Bacon & Cheese Toppa</h1>
+        <img src="/Images/baconcheesetoppa.jfif" alt="bacon and cheese toppa" style="height:auto; width:contain">
+    </div>
+</div>
