update size images

--- a/bashtest/Views/Home/Index.cshtml
+++ b/bashtest/Views/Home/Index.cshtml
@@ -13,15 +13,15 @@
     </div>
     <div class="col">
 		<h1>Cheese Bites</h1>
-        <img src="/Images/cheesebites.jfif" alt="cheese bites" style="height:auto; width:contain">
+        <img src="/Images/cheesebites.jfif" alt="cheese bites" style="height:350px; width:350px">
     </div>
     <div class="col">
         <h1>Chicken Bites</h1>
-        <img src="/Images/chickenbites.jfif" alt="chicken bites" style="height:auto; width:contain">
+        <img src="/Images/chickenbites.jfif" alt="chicken bites" style="height:350px; width:350px">
     </div>
     <div class="col">
         <h1>Broccoli bites</h1>
-        <img src="/Images/brocollibites.jfif" alt="broccoli bites" style="height:auto; width:contain">
+        <img src="/Images/brocollibites.jfif" alt="broccoli bites" style="height:350px; width:350px">
     </div>
 </div>
 
@@ -32,11 +32,11 @@
     </div>
     <div class="col">
         <h1>Quarter pounder</h1>
-        <img src="/Images/quarterpounder.jfif" alt="quarter pounder" style="height:auto; width:contain">
+        <img src="/Images/quarterpounder.jfif" alt="quarter pounder" style="height:350px; width:600px">
     </div>
     <div class="col">
         <h1>Southern Style Chicken Pattie</h1>
-        <img src="/Images/chickenpatty.jfif" alt="chicken patty" style="height:auto; width:contain">
+        <img src="/Images/chickenpatty.jfif" alt="chicken patty" style="height:350px; width:600px">
     </div>
 </div>
 
@@ -47,14 +47,14 @@
     </div>
     <div class="col">
         <h1>Lasagne Toppa</h1>
-        <img src="/Images/lasagnatoppa.jfif" alt="lasagna toppa" style="height:auto; width:contain">
+        <img src="/Images/lasagnatoppa.jfif" alt="lasagna toppa" style="height:350px; width:350px">
     </div>
     <div class="col">
         <h1>Chicken Cordon Bleu</h1>
-        <img src="/Images/chickencordueblue.jfif" alt="chicken cordon bleu" style="height:auto; width:contain">
+        <img src="/Images/chickencordueblue.jfif" alt="chicken cordon bleu" style="height:350px; width:350px">
     </div>
     <div class="col">
         <h1>Bacon & Cheese Toppa</h1>
-        <img src="/Images/baconcheesetoppa.jfif" alt="bacon and cheese toppa" style="height:auto; width:contain">
+        <img src="/Images/baconcheesetoppa.jfif" alt="bacon and cheese toppa" style="height:350px; width:350px">
     </div>
 </div>
